# library-manager

./: .gitignore  .gitmodules  Cargo.toml  README.md  config.toml  run.sh
asserts/: index.html
asserts/static/css/: chunk-2a8ac2b3.3e1bff18.css  chunk-3d39d3e4.0c7911bb.css
asserts/static/js/: app.19a6a09a.js  chunk-2a8ac2b3.1ad051b9.js  chunk-2d0e4b0c.ce21eb21.js  chunk-3d39d3e4.f3847bc7.js
src/: auth.rs  config.rs  embed.rs  error.rs  lib.rs  logging.rs  main.rs  types.rs
src/api/: mod.rs
src/api/admin/: book.rs  mod.rs  user.rs
src/api/book/: borrow.rs  borrow_record.rs  list.rs  mod.rs  return_book.rs  return_record.rs  search.rs
src/api/user/: info.rs  login.rs  logout.rs  mod.rs  register.rs  update.rs
src/db/: book.rs  mod.rs  record.rs  user.rs
src/middleware/: logging.rs  mod.rs  token.rs
