[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = {version = "1",features = ["static-files"]}
rust-embed="6"
tokio = {version = "1",features = ["full"]}
tracing-subscriber = "0.3.8"
log = "0.4"
mime_guess = "*"
hex = "*"
tracing = "0.1"
