[package]
name = "backend"
version = "0.1.0"
edition = "2021"
#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1", features = ["embed"] }
rust-embed = { version = "6", features = ["compression"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
tracing-subscriber = { version = "0.3.8", features = ["env-filter", "time"] }
log = "0.4"
serde = "1"
serde_json = "1"
jwt-simple = "0.11"
serde_repr = "0.1.7"
validator = { version = "0.14.0", features = ["derive"] }
regex = "1"
lazy_static = "1"
rbatis = { version = "3.0.31", default-features = false, features = [
    "runtime-tokio-rustls",
    "mysql",
    "sqlite",
] }
toml = "0.5"
colored = "2"
rbson = "2"
md5 = "0.7"
chrono = "0.4"
time = { version = "0.3", features = ["parsing"] }
thiserror = "1"

[build-dependencies]
npm_rs = "0.2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
incremental = false

[profile.dev]
codegen-units = 1024
panic = "abort"
debug = false
incremental = true
opt-level = 0
